# onejit

./: .clang-format  .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  go.mod  go.sum  gomacrojit.go  main.cpp  main.go  test_main.cpp
admin/: bootstrap.sh
go/: main.go
go/arch/: arch.go  arch_386.go  arch_amd64.go  arch_arm.go  arch_arm64.go  arch_other.go  config.go  os.go  os_linux.go  os_other.go  os_windows.go
go/ast/: atom.go  bad.go  binary.go  dir.go  field.go  file.go  func.go  functype.go  generic.go  list.go  node.go  slice.go  unary.go  valuespec.go
go/cmd/: repl.go
go/config/: arch.go  arch_386.go  arch_amd64.go  arch_arm.go  arch_arm64.go  arch_other.go  feature.go  lang.go  os.go  os_linux.go  os_other.go  os_windows.go  target.go
go/constant/: error.go  kind.go  op.go  rune.go  value.go  z_test.go
go/io/: error.go  interface.go
go/jit/: arch.go  binary.go  call.go  const.go  error.go  func.go  kind.go  op.go  reg.go  stmt.go  tuple.go  types.go  unary.go  z_test.go
go/jit_old/: _arith_arm64.go  _example.go  _z_test.go  alias.go  code.go  comp.go  expr.go  inst.go  op1.go  op2.go  output.go  softreg.go  statement.go  z_test.go
go/parser/: decl.go  dir.go  error.go  expr.go  file.go  func.go  interface.go  parser.go  stmt.go  struct.go  token.go  type.go  z_expr_test.go  z_multi_test.go  z_test.go
go/scanner/: always_eof.go  comment.go  error.go  identifier.go  item.go  number.go  scanner.go  string.go  unicode.go  utf8reader.go  z_def_test.go  z_number_test.go  z_position_test.go  z_simple_test.go  z_single_test.go  z_string_test.go  z_test.go  z_zmulti_test.go
go/sort/: search.go  sort.go
go/strings/: builder.go  builder_safe.go  builder_unsafe.go  escape.go  escape_test.go  inttostring.go  lower.go  reader.go  string.go
go/testutil/: error.go  sortinfo.go  visit.go  visitdir.go  visitfile.go
go/token/: error.go  file.go  fileset.go  ident.go  kind.go  position.go  token.go
go/typecheck/: api.go  checker.go  collector.go  decl.go  error.go  errors.go  globaldecl.go  multiscope.go  objdecl.go  object.go  resolver.go  resolver_const.go  resolver_declare.go  resolver_expr.go  resolver_type.go  resolver_value.go  symbol.go  z_test.go
include/: archid.hpp  config.h.in  onejit_config.h.in
jit/: _arith_arm64.go  alias.go  amd64.go  amd64_binary.go  amd64_mem.go  api.go  arch.go  arch_compiled.go  arm.go  arm64.go  assembler.go  binary.go  binaryexpr.go  call.go  code.go  comp.go  compiled.go  const.go  constraint.go  error.go  expr.go  func.go  inst.go  kind.go  mem.go  op.go  op1.go  op2.go  output.go  reg.go  softreg.go  stmt.go  tuple.go  tupleexpr.go  types.go  unary.go  unaryexpr.go  x86.go  z_test.go
jit_old/: _arith_arm64.go  _example.go  _z_test.go  alias.go  code.go  comp.go  expr.go  inst.go  op1.go  op2.go  output.go  softreg.go  statement.go  z_test.go
oneasm/: Makefile.am  Makefile.in
oneasm/x86/: Makefile.am  Makefile.in  inst0.cpp  inst1.cpp
oneasm/x86/_template/: _bswap.s
onejit/: Makefile.am  Makefile.in  abi.cpp  abi.hpp  archid.cpp  archid.hpp  arg.cpp  assembler.cpp  binary.cpp  binaryexpr.cpp  bits.cpp  bits.hpp  call.cpp  callexpr.cpp  chars.cpp  check.cpp  code.cpp  codeparser.cpp  codeparser.hpp  compiler.cpp  config.h.in  const.cpp  constant.cpp  constexpr.cpp  endian.hpp  error.cpp  error.hpp  eval.cpp  expr.cpp  flowgraph.cpp  flowgraph.hpp  fmt_fwd.hpp  func.cpp  func.hpp  funcheader.cpp  functype.cpp  fwd.hpp  group.cpp  group.hpp  id.cpp  (+55 more)
onejit/arm64/: regid.hpp
onejit/ir/: allow.hpp  binary.cpp  call.cpp  call.hpp  childrange.cpp  childrange.hpp  comma.cpp  comma.hpp  const.cpp  const.hpp  expr.cpp  fmt_fwd.hpp  functype.cpp  fwd.hpp  header.cpp  header.hpp  label.cpp  label_hash.hpp  mem.cpp  mem.hpp  name.cpp  name.hpp  node.cpp  node_hash.hpp  stmt.hpp  stmt0.cpp  stmt1.cpp  stmt2.cpp  stmt2.hpp  stmt3.cpp  stmt3.hpp  stmt4.cpp  stmtn.cpp  stmtn.hpp  syntax.hpp  tuple.cpp  tuple.hpp  unary.cpp  unary.hpp  util.cpp  (+3 more)
onejit/mir/: address.cpp  assembler.cpp  assembler.hpp  compiler.cpp  compiler.hpp  fwd.hpp  mem.cpp  mem.hpp  reg.hpp  regid.hpp  util.cpp  util.hpp
onejit/node/: binary.cpp  call.cpp  childrange.cpp  comma.cpp  const.cpp  expr.cpp  functype.cpp  header.cpp  label.cpp  mem.cpp  name.cpp  node.cpp  nodeheader.cpp  stmt0.cpp  stmt1.cpp  stmt2.cpp  stmt3.cpp  stmt4.cpp  stmtn.cpp  tuple.cpp  unary.cpp  var.cpp
onejit/reg/: allocator.cpp  allocator.hpp  fwd.hpp  liveness.hpp
onejit/x64/: Makefile.am  Makefile.in  addr.cpp  address.cpp  address.hpp  arg.cpp  asm.cpp  asm.hpp  asm0.cpp  asm1.cpp  asm2.cpp  asm3.cpp  asm_util.cpp  asmn.cpp  assembler.cpp  compiler.cpp  emit.cpp  inst.hpp  inst0.cpp  inst1.cpp  mem.cpp  mem.hpp  reg.hpp  rex_byte.cpp  scale.cpp  util.cpp
onejit/x64/_template/: _call.s
onejit/x86/: Makefile.am  Makefile.in  addr.cpp  arg.cpp  asm0_x64.cpp  asm1_x64.cpp  asm2_x64.cpp  asm3_x64.cpp  asm_util.cpp  fwd.hpp  inst.hpp  inst0.cpp  inst1.cpp  mem.cpp  mem.hpp  regid.hpp  rex_byte_x64.cpp  scale.cpp
onejit/x86/_template/: _bswap.s  _call.s
onestl/: Makefile.am  Makefile.in  algorithm.hpp  array.cpp  arrayhelper.cpp  arrayhelper.hpp  bitset.cpp  buffer.hpp  chars.cpp  check.cpp  crange.hpp  fmt.cpp  fmt_cstdio.cpp  fmt_string.cpp  fwd.hpp  graph.cpp  graph.hpp  mem.cpp  range.hpp  span.hpp  sspan.hpp  string.cpp  test.cpp  test.hpp  vector.cpp  vectorhelper.cpp  view.hpp  writer.hpp  writer_cstdio.cpp  writer_cstdio.hpp  writer_string.cpp  writer_string.hpp
onestl/io/: fmt.cpp  fmt.hpp  fwd.hpp  reader.cpp  reader.hpp  reader_chars.cpp  reader_chars.hpp  scan.cpp  scan.hpp  writer.hpp  writer_cstdio.cpp  writer_cstdio.hpp  writer_string.cpp  writer_string.hpp
src/: Makefile.am  Makefile.in  archid.cpp  kind.cpp  main.cpp  size.cpp
src/.deps/: archid.Po
test/: Makefile.am  Makefile.in  test.hpp  test_disasm.cpp  test_disasm.hpp  test_eval.cpp  test_expr.cpp  test_func.cpp  test_main.cpp  test_make_func.cpp  test_mir.cpp  test_optimize.cpp  test_regallocator.cpp  test_stl.cpp  test_stmt.cpp  test_x64.cpp
(+571 files in other folders)
