SUBDIRS = x86

noinst_LIBRARIES       = liboneasm.a
# pkglib_LTLIBRARIES   =

AM_CPPFLAGS            = -I$(top_srcdir)/include
# liboneasm_a_CPPFLAGS = -I$(top_srcdir)/include

liboneasm_a_SOURCES    =

EXTRA_liboneasm_a_DEPENDENCIES = $(LIBONEASM_X86)
# liboneasm_a_LDFLAGS  =
liboneasm_a_LIBADD      = x86/inst0.o x86/inst1.o
