SUBDIRS =

noinst_LIBRARIES       = libonestl.a
# pkglib_LTLIBRARIES   =

AM_CPPFLAGS            = -I$(top_srcdir)/include
# libonestl_a_CPPFLAGS = -I$(top_srcdir)/include

libonestl_a_SOURCES    = chars.cpp check.cpp mem.cpp string.cpp vector.cpp


# libonestl_a_LDFLAGS  =
# libonestl_a_LDADD    =
