SUBDIRS =

noinst_LIBRARIES       = libonestl.a
# pkglib_LTLIBRARIES   =

AM_CPPFLAGS            = -I$(top_srcdir)
# libonestl_a_CPPFLAGS =

libonestl_a_SOURCES    = array.cpp arrayhelper.cpp bitset.cpp chars.cpp graph.cpp mem.cpp string.cpp test.cpp \
                         io/reader.cpp io/reader_chars.cpp io/scan.cpp \
                         io/fmt.cpp io/writer_cstdio.cpp io/writer_string.cpp


# libonestl_a_LDFLAGS  =
# libonestl_a_LDADD    =
