SUBDIRS =

bin_PROGRAMS          = onejit
# pkglib_LTLIBRARIES  =

# AM_CPPFLAGS         = -I$(top_srcdir)/include
# onejit_CPPFLAGS     = -I$(top_srcdir)/include

onejit_SOURCES        = archid.cpp kind.cpp main.cpp size.cpp

# onejit_LDFLAGS      = -export-dynamic $(LDFLAGS_BIN_EXPORT_DYNAMIC)
# onejit_LDADD        =
