SUBDIRS =

noinst_LIBRARIES           = liboneasm_x86.a
# pkglib_LTLIBRARIES       =

AM_CPPFLAGS                = -I$(top_srcdir)/include
# liboneasm_x86_a_CPPFLAGS = -I$(top_srcdir)/include

liboneasm_x86_a_SOURCES    = inst0.cpp inst1.cpp

# liboneasm_x86_a_LDFLAGS  =
# liboneasm_x86_a_LDADD    =
