SUBDIRS =

noinst_LIBRARIES           = libonejit_x64.a
# pkglib_LTLIBRARIES       =

AM_CPPFLAGS                = -I$(top_srcdir)/include
# libonejit_x64_a_CPPFLAGS = -I$(top_srcdir)/include

libonejit_x64_a_SOURCES    = addr.cpp inst0.cpp inst1.cpp

# libonejit_x64_a_LDFLAGS  =
# libonejit_x64_a_LDADD    =
