SUBDIRS =

noinst_LIBRARIES           = libonejit_x64.a
# pkglib_LTLIBRARIES       =

AM_CPPFLAGS                = -I$(top_srcdir)/include
# libonejit_x64_a_CXXFLAGS =

libonejit_x64_a_SOURCES    = \
        arg.cpp asm0.cpp asm1.cpp asm2.cpp asm3.cpp assembler.cpp \
        mem.cpp rex_byte.cpp scale.cpp util.cpp

# libonejit_x64_a_LDFLAGS  =
# libonejit_x64_a_LDADD    =
