SUBDIRS =

noinst_LIBRARIES           = libonejit_x86.a
# pkglib_LTLIBRARIES       =

AM_CPPFLAGS                = -I$(top_srcdir)/include
# libonejit_x86_a_CXXFLAGS =

libonejit_x86_a_SOURCES    = \
        arg.cpp asm_util.cpp asm_x64.cpp asm0_x64.cpp asm1_x64.cpp asm2_x64.cpp asm3_x64.cpp \
        mem.cpp rex_byte_x64.cpp scale.cpp

# libonejit_x86_a_LDFLAGS  =
# libonejit_x86_a_LDADD    =
